WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283196
[WebGPU] Release assertion triggered on destroyed canvas backing
https://bugs.webkit.org/show_bug.cgi?id=283196
Summary
[WebGPU] Release assertion triggered on destroyed canvas backing
Mike Wyrzykowski
Reported
2024-11-15 14:05:04 PST
[WebGPU] Release assertion triggered on destroyed canvas backing
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-11-15 14:05:21 PST
rdar://139732495
Mike Wyrzykowski
Comment 2
2024-11-15 14:14:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36718
EWS
Comment 3
2024-11-18 14:11:45 PST
Committed
286756@main
(5d6610e9cc8e): <
https://commits.webkit.org/286756@main
> Reviewed commits have been landed. Closing PR #36718 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug