[WebGPU] Release assertion triggered on destroyed canvas backing https://bugs.webkit.org/show_bug.cgi?id=283196 rdar://139732495

Reviewed by Tadeu Zagallo.

Fix invalid release assertion in Texture::recreateIfNeeded which
could be triggered on a destroyed canvas texture.

* LayoutTests/fast/webgpu/nocrash/fuzz-283196-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-283196.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::recreateIfNeeded):
Only allow canvas backings to no longer be considered destroyed.

Canonical link: https://commits.webkit.org/286756@main